--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
+    "pdf2json": "^1.2.0",
+    "pdfkit": "^0.11.0",
+    "pdfreader": "^1.2.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
