Mongo Atlas integration

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PROT=mongodb
 DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=poetrydb
+DB_ATLAS=mongodb+srv://poegramonk:hydN3FjYAmDe47Pu@cluster0.eyhpx.mongodb.net/poetrydb
